<resources>
    <string name="app_name">FinallyFunctional\'s VR Shoes</string>
    <string name="bt_not_available">Your device does not support bluetooth</string>
    <string name="bt_enabled_msg">Bluetooth has been enabled</string>
    <string name="pair_vr_shoes_header">Pair VR Shoes</string>
    <string name="refresh">Refresh</string>
    <string name="OK">OK</string>
    <string name="pair_vr_shoes_list_header">Select a VR shoe to pair with.</string>
    <string name="no_vr_shoes_paired">No paired VR shoes found. Please go to your bluetooth settings and pair with two VR shoes.</string>
    <string name="stored_vr_shoes_not_found">VR shoes previously used were not found. Redirecting you to pairing page.</string>
    <string name="show_logs">Show Logs</string>
    <string name="back">Back</string>
    <string name="ping">Ping</string>
    <string name="unknownError">An unknown error has occured.</string>
    <string name="buttons_test">Buttons Test</string>
    <string name="front_button_pressed">Front Button Pressed</string>
    <string name="rear_button_pressed">Rear Button Pressed</string>
    <string name="movement">Movement</string>
    <string name="forward_distance">Forward Distance (m): </string>
    <string name="sideway_distance">Sideway Distance (m): </string>
    <string name="forward_speed">Forward Speed (m/s): </string>
    <string name="sideway_speed">Sideway Speed (m/s): </string>
    <string name="reset_origin">Reset Origin</string>
    <string name="device_id">Device ID</string>
    <string name="set_rpm">Set RPM</string>
    <string name="forward">Forward</string>
    <string name="backward">Backward</string>
    <string name="left">Left</string>
    <string name="right">Right</string>
    <string name="manual_control">Manual Control</string>
    <string name="shoes_pairing_failed">Shoes failed to pair with each other</string>
    <string name="communication_error">A communication error has occurred</string>
    <string name="clear">Clear</string>
    <string name="start_walking">Start Walking</string>
    <string name="walking">Walking</string>
    <string name="not_walking">Not Walking</string>
    <string name="settings">Settings</string>
    <string name="Diagnostics">Diagnostics</string>
    <string name="side">Side</string>
    <string name="walking_test">Walking Test</string>
    <string name="duty_cycle_boost">Duty Cycle Boost</string>
    <string name="current_forward_duty_cycle">Forward Duty Cycle: </string>
    <string name="current_sideway_duty_cycle">Sideway Duty Cycle: </string>
    <string name="speed_multiplier">Speed Multiplier</string>
    <string name="peak_current">Peak Current: </string>
    <string name="average_current">Average Current: </string>
    <string name="amp_hours">Amp Hours: </string>
    <string name="amp_hours_charged">Amp Hours Charged: </string>
    <string name="kp">Kp</string>
    <string name="ki">Ki</string>
    <string name="kd">Kd</string>
    <string name="actual_vs_desired_speed">Actual vs. Desired Speed</string>
    <string name="speeds">Speeds</string>
    <string name="actual_speed">Actual Speed</string>
    <string name="desired_speed">Desired Speed</string>
    <string name="front_button_value">Front Button Value</string>
    <string name="rear_button_value">Rear Button Value</string>
    <string name="button_max_difference">Percentage Max Difference</string>
    <string name="configure_buttons">Configure Buttons</string>
    <string name="configure_buttons_btn_text">Configure Pressed Values</string>
    <string name="countdown_default">600 s</string>
    <string name="start">Start</string>
    <string name="stop">Stop</string>
    <string name="break_in_shoes">Break In Shoes</string>
    <string name="reset_distance">Reset Distance</string>
    <string name="stride_length">Stride Length: </string>
    <string name="center_radius">Center Radius</string>
    <string name="center_offset">Center Offset</string>
    <string name="calculate_stride_length">Calculate Stride Length</string>
    <string name="position">Position: </string>
    <string-array name="sides_array">
        <item>Unspecified</item>
        <item>Right</item>
        <item>Left</item>
    </string-array>
</resources>
