<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.WalkingTestActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <ToggleButton
            android:id="@+id/walkingTestStartBtn"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/start_walking"
            android:textOff="@string/not_walking"
            android:textOn="@string/walking" />

        <Button
            android:id="@+id/walkingTestResetOriginBtn"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:onClick="resetDistanceBtnClick"
            android:text="@string/reset_distance" />

        <ScrollView
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical" >

                <TextView
                    android:id="@+id/walkingTestDutyCycleBoostLabel"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/duty_cycle_boost"
                    android:textSize="24sp" />

                <EditText
                    android:id="@+id/walkingTestDutyCycleBoostText"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:autofillHints="@string/duty_cycle_boost"
                    android:ems="10"
                    android:hint="@string/duty_cycle_boost"
                    android:inputType="numberDecimal" />

                <View
                    android:id="@+id/divider"
                    android:layout_width="match_parent"
                    android:layout_height="1dp"
                    android:background="?android:attr/listDivider" />

                <TextView
                    android:id="@+id/walkingTestSpeedMultiplierLabel"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/speed_multiplier"
                    android:textSize="24sp" />

                <EditText
                    android:id="@+id/walkingTestSpeedMultiplierText"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:autofillHints="@string/speed_multiplier"
                    android:ems="10"
                    android:hint="@string/speed_multiplier"
                    android:inputType="numberDecimal" />

                <View
                    android:id="@+id/divider2"
                    android:layout_width="match_parent"
                    android:layout_height="1dp"
                    android:background="?android:attr/listDivider" />

                <Spinner
                    android:id="@+id/walkingTestVrShoeSpinner"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content" />

                <TextView
                    android:id="@+id/walkingTestForwardDistanceText"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/forward_distance"
                    android:textSize="24sp" />

                <TextView
                    android:id="@+id/walkingTestSidewayDistanceText"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/sideway_distance"
                    android:textSize="24sp" />

                <View
                    android:id="@+id/divider3"
                    android:layout_width="match_parent"
                    android:layout_height="1dp"
                    android:background="?android:attr/listDivider" />

                <TextView
                    android:id="@+id/walkingTestPeakCurrentLabel"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/peak_current"
                    android:textSize="24sp" />

                <TextView
                    android:id="@+id/walkingTestAverageCurrentLabel"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/average_current"
                    android:textSize="24sp" />

                <TextView
                    android:id="@+id/walkingTestAmpHoursLabel"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/amp_hours"
                    android:textSize="24sp" />

                <TextView
                    android:id="@+id/walkingTestAmpHoursChargedLabel"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/amp_hours_charged"
                    android:textSize="24sp" />

                <View
                    android:id="@+id/divider4"
                    android:layout_width="match_parent"
                    android:layout_height="1dp"
                    android:background="?android:attr/listDivider" />

                <TextView
                    android:id="@+id/walkingTestPositionLabel"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/position"
                    android:textSize="24sp" />

                <TextView
                    android:id="@+id/walkingTestStrideLengthLabel"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/stride_length"
                    android:textSize="24sp" />

                <TextView
                    android:id="@+id/walkingTestCenterRadiusLabel"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/center_radius"
                    android:textSize="24sp" />

                <EditText
                    android:id="@+id/walkingTestCenterRadiusText"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:autofillHints="@string/center_radius"
                    android:ems="10"
                    android:hint="@string/center_radius"
                    android:inputType="numberDecimal" />

                <TextView
                    android:id="@+id/walkingTestCenterOffsetLabel"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/center_offset"
                    android:textSize="24sp" />

                <EditText
                    android:id="@+id/walkingTestCenterOffsetText"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:autofillHints="@string/center_offset"
                    android:ems="10"
                    android:hint="@string/center_radius"
                    android:inputType="numberDecimal|numberSigned" />

                <CheckBox
                    android:id="@+id/walkingTestCalculateStrideLengthCheckBox"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/calculate_stride_length" />

            </LinearLayout>
        </ScrollView>

        <Button
            android:id="@+id/walkingTestBackBtn"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:onClick="backBtnClicked"
            android:text="@string/back" />
    </LinearLayout>
</androidx.constraintlayout.widget.ConstraintLayout>