<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.BreakShoesInActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:gravity="center">

        <TextView
            android:id="@+id/breakShoesInCountdownLabel"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:text="@string/countdown_default"
            android:textSize="24sp"
            android:gravity="center"
            android:layout_weight="1"/>

        <Button
            android:id="@+id/breakShoesInStartStopBtn"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/start"
            android:onClick="startStopBtnClicked"/>

        <Button
            android:id="@+id/breakShoesInForwardBackwardBtn"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/forward"
            android:onClick="forwardBackwardBtnClicked"/>

        <Button
            android:id="@+id/breakShoesInForwardBackBtn"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/back"
            android:onClick="backBtnClicked"/>
    </LinearLayout>
</androidx.constraintlayout.widget.ConstraintLayout>