<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.ManualControlActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <TextView
            android:id="@+id/manualControlVrShoe1DeviceIdLabel"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/device_id"
            android:textSize="24sp" />

        <EditText
            android:id="@+id/manualControlVrShoe1RpmEditText"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:ems="10"
            android:inputType="number"
            android:autofillHints="@string/set_rpm"
            android:hint="@string/set_rpm"/>

        <Button
            android:id="@+id/manualControlVrShoe1ForwardBtn"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/forward" />

        <Button
            android:id="@+id/manualControlVrShoe1BackwardBtn"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/backward" />

        <Button
            android:id="@+id/manualControlVrShoe1LeftBtn"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/left" />

        <Button
            android:id="@+id/manualControlVrShoe1RightBtn"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/right" />

        <TextView
            android:id="@+id/manualControlVrShoe2DeviceIdLabel"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/device_id"
            android:textSize="24sp" />

        <EditText
            android:id="@+id/manualControlVrShoe2RpmEditText"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:autofillHints="@string/set_rpm"
            android:ems="10"
            android:hint="@string/set_rpm"
            android:inputType="number" />

        <Button
            android:id="@+id/manualControlVrShoe2ForwardBtn"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/forward" />

        <Button
            android:id="@+id/manualControlVrShoe2BackwardBtn"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/backward" />

        <Button
            android:id="@+id/manualControlVrShoe2LeftBtn"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/left" />

        <Button
            android:id="@+id/manualControlVrShoe2RightBtn"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/right" />

        <TextView
            android:id="@+id/manualControlSpacer"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1"/>

        <Button
            android:id="@+id/manualControlBackBtn"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:onClick="backBtnClicked"
            android:text="@string/back" />
    </LinearLayout>
</androidx.constraintlayout.widget.ConstraintLayout>