<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.MovementDiagnosticsActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <TextView
            android:id="@+id/movementDiagnosticVrShoe1Header"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textSize="36sp" />

        <TextView
            android:id="@+id/movementDiagnosticVrShoe1ForwardDistanceLabel"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/forward_distance"
            android:textSize="24sp" />

        <TextView
            android:id="@+id/movementDiagnosticVrShoe1SidewaysDistanceLabel"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/sideway_distance"
            android:textSize="24sp" />

        <TextView
            android:id="@+id/movementDiagnosticVrShoe1ForwardSpeedLabel"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/forward_speed"
            android:textSize="24sp" />

        <TextView
            android:id="@+id/movementDiagnosticVrShoe1SidewaySpeedLabel"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/sideway_speed"
            android:textSize="24sp" />

        <Button
            android:id="@+id/movementDiagnosticsVrShoe1ResetOriginBtn"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:onClick="resetOriginVrShoe1BtnClicked"
            android:text="@string/reset_distance" />

        <TextView
            android:id="@+id/movementDiagnosticVrShoe2Header"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textSize="36sp" />

        <TextView
            android:id="@+id/movementDiagnosticVrShoe2ForwardDistanceLabel"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/forward_distance"
            android:textSize="24sp" />

        <TextView
            android:id="@+id/movementDiagnosticVrShoe2SidewaysDistanceLabel"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/sideway_distance"
            android:textSize="24sp" />

        <TextView
            android:id="@+id/movementDiagnosticVrShoe2ForwardSpeedLabel"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/forward_speed"
            android:textSize="24sp" />

        <TextView
            android:id="@+id/movementDiagnosticVrShoe2SidewaySpeedLabel"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/sideway_speed"
            android:textSize="24sp" />

        <Button
            android:id="@+id/movementDiagnosticsVrShoe2ResetOriginBtn"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:onClick="resetOriginVrShoe2BtnClicked"
            android:text="@string/reset_distance" />

        <TextView
            android:id="@+id/movementDiagnosticsSpacer"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1"
            android:text="" />

        <Button
            android:id="@+id/movementDiagnosticsBackBtn"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:onClick="backBtnClicked"
            android:text="@string/back" />

    </LinearLayout>
</androidx.constraintlayout.widget.ConstraintLayout>