<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.MonitorActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <Button
            android:id="@+id/monitorBackBtn"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:onClick="backBtnClicked"
            android:text="@string/back" />

        <ScrollView
            android:id="@+id/monitorScrollView"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">

                <TextView
                    android:id="@+id/monitorTextView"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content" />

            </LinearLayout>
        </ScrollView>

        <Button
            android:id="@+id/monitorClearBtn"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:onClick="clearBtnClicked"
            android:text="@string/clear" />

        <Button
            android:id="@+id/monitorPingBtn"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:onClick="pingBtnClicked"
            android:text="@string/ping" />

    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>