<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.SettingsActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <TextView
            android:id="@+id/settingsVrShoe1Header"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/device_id"
            android:textSize="36sp" />

        <TextView
            android:id="@+id/settingsVrShoe1SideLabel"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/side"
            android:textSize="24sp" />

        <Spinner
            android:id="@+id/settingsVrShoe1SideSpinner"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />

        <TextView
            android:id="@+id/settingsSpacer1"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1"/>

        <TextView
            android:id="@+id/settingsVrShoe2Header"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/device_id"
            android:textSize="36sp" />

        <TextView
            android:id="@+id/settingsVrShoe2SideLabel"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/side"
            android:textSize="24sp" />

        <Spinner
            android:id="@+id/settingsVrShoe2SideSpinner"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />

        <TextView
            android:id="@+id/settingsSpacer2"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1"/>

        <Button
            android:id="@+id/settingsBackBtn"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:onClick="backBtnClicked"
            android:text="@string/back" />
    </LinearLayout>
</androidx.constraintlayout.widget.ConstraintLayout>